/*
 * Copyright 2016 Sascha Haeberling
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *       http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package com.s13g.winston.proto;

option java_package = "com.s13g.winston.proto";
option java_outer_classname = "ForClients";

/* Contains whole system data loaded by a client. */
message ChannelData {
    /* All the channels that are known to the system. */
    repeated Channel channel = 1;

    /* Defines a single Winston channel. */
    message Channel {
        /* System-wide unique ID, e.g. 'io/winston/pi-power-1'. */
        string id = 1;
        /* The ID of the module. */
        string module_type = 2;
        /* The type of the channel, like 'temperature' etc. */
        string type = 3;
        /* Human readable name, to be used as a label. */
        string name = 4;
        /* All values from this channel .*/
        repeated ChannelValue value = 5;

        /* Defines a channel value. */
        message ChannelValue {
            /* The id of the ChannelValue. */
            string id = 1;
            /* Read/write mode. */
            string mode = 2;
        }
    }
}